build/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { HtmlTag: peg$parseHtmlTag },
      peg$startRuleFunction  = peg$parseHtmlTag,

      peg$c0 = "-->",
      peg$c1 = peg$literalExpectation("-->", false),
      peg$c2 = function(word) {
        return {
          view:{
             tag:null,
             events:[],
             attr:[]
          },
          child:[word]
        }
      },
      peg$c3 = peg$otherExpectation("<!--"),
      peg$c4 = "<!--",
      peg$c5 = peg$literalExpectation("<!--", false),
      peg$c6 = peg$otherExpectation("comment content"),
      peg$c7 = peg$anyExpectation(),
      peg$c8 = function(c) {return c},
      peg$c9 = function(word) {
       return word.join('')
      },
      peg$c10 = function(openTag, child, closeTag) {
       
       const openTagValue = openTag.tag;
       if (openTagValue != closeTag) {
              error("Expected </" + openTagValue + "> but </" + closeTag + "> found.");
        }
        return {
         view:openTag,
         child: child.filter(item=> {
            return item!=null && typeof item==='string'?item.trim().length!==0:true
         })
        }
      },
      peg$c11 = "/",
      peg$c12 = peg$literalExpectation("/", false),
      peg$c13 = function(openTag) {
        return {
          view:openTag
        }
      },
      peg$c14 = function(word, option) {
        const result = {
           tag:word || 'fragment',
           events:[],
           attr:[],
           dir:{}
        }
        option.forEach(val=>{
          const key = val?Object.keys(val)[0]:null;
          switch(key){
            case 'event':
              result.events.push(val[key]);break;
            case 'attr':
              result.attr.push(val[key]);break;
             case 'dir':
               const dirValue = val[key];
               result.dir[dirValue.name]=dirValue.value;
               break;
            case null:
              break;
            default:
              result[key] = val[key]   
          }
        });
        if(Object.keys(result.dir).length===0){
           delete result.dir;
        }
       return result;
      },
      peg$c15 = function(value) {
        if(value==null){
          return null;
        }
        
        const key = Object.keys(value)[0];
        return {
           [key]:value[key]
        }
      },
      peg$c16 = peg$otherExpectation("close tag"),
      peg$c17 = function(word) {
        return word || 'fragment'
      },
      peg$c18 = peg$otherExpectation("html tag"),
      peg$c19 = /^[a-zA-Z0-9\-_]/,
      peg$c20 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "-", "_"], false, false),
      peg$c21 = function(val) {
        return val.join("");
      },
      peg$c22 = peg$otherExpectation("Whitespace"),
      peg$c23 = /^[ \t]/,
      peg$c24 = peg$classExpectation([" ", "\t"], false, false),
      peg$c25 = peg$otherExpectation("New Line"),
      peg$c26 = /^[\n]/,
      peg$c27 = peg$classExpectation(["\n"], false, false),
      peg$c28 = function() {return null;},
      peg$c29 = peg$otherExpectation("One or more whitespaces"),
      peg$c30 = function(space) {return null;},
      peg$c31 = peg$otherExpectation("directive"),
      peg$c32 = ":",
      peg$c33 = peg$literalExpectation(":", false),
      peg$c34 = function(name, value) {
         return {dir:{
            name,
            value: value || []
         }};
      },
      peg$c35 = "(",
      peg$c36 = peg$literalExpectation("(", false),
      peg$c37 = ")",
      peg$c38 = peg$literalExpectation(")", false),
      peg$c39 = function(expFirst, expRest) {
         return [expFirst].concat(expRest.map(item=> item))
      },
      peg$c40 = ",",
      peg$c41 = peg$literalExpectation(",", false),
      peg$c42 = function(exp) {
        return exp;
      },
      peg$c43 = ":if(",
      peg$c44 = peg$literalExpectation(":if(", false),
      peg$c45 = function(exp) {
         return {ifExp: {ifCond:exp}};
      },
      peg$c46 = ":else-if(",
      peg$c47 = peg$literalExpectation(":else-if(", false),
      peg$c48 = function(exp) {
         return {ifExp: {elseIfCond:exp}};
      },
      peg$c49 = ":else",
      peg$c50 = peg$literalExpectation(":else", false),
      peg$c51 = function() {
         return {ifExp: {else:true}}
      },
      peg$c52 = ":for(",
      peg$c53 = peg$literalExpectation(":for(", false),
      peg$c54 = "in",
      peg$c55 = peg$literalExpectation("in", false),
      peg$c56 = function(key, index, value) {
         return {forExp:{
            key, value,index : index || 'i'
         }}
      },
      peg$c57 = "=",
      peg$c58 = peg$literalExpectation("=", false),
      peg$c59 = function(attr, word) {
         return {attr: {key:`'${attr}'`,value:word, isBind:false}};
      },
      peg$c60 = function(attr, word, filters) {
         return { 
            attr: {key:attr,value:word, isExpression:true, filters}
         };
      },
      peg$c61 = function(index) {
      	return index ;
      },
      peg$c62 = ":html",
      peg$c63 = peg$literalExpectation(":html", false),
      peg$c64 = function(val) {
         return {html: val};
      },
      peg$c65 = peg$otherExpectation("<"),
      peg$c66 = /^[<]/,
      peg$c67 = peg$classExpectation(["<"], false, false),
      peg$c68 = peg$otherExpectation("</"),
      peg$c69 = /^[\/]/,
      peg$c70 = peg$classExpectation(["/"], false, false),
      peg$c71 = peg$otherExpectation(">"),
      peg$c72 = /^[>]/,
      peg$c73 = peg$classExpectation([">"], false, false),
      peg$c74 = peg$otherExpectation("mustache expression"),
      peg$c75 = "{{",
      peg$c76 = peg$literalExpectation("{{", false),
      peg$c77 = "}}",
      peg$c78 = peg$literalExpectation("}}", false),
      peg$c79 = function(val, filters) {
      	return {mustacheExp:val , filters};
      },
      peg$c80 = peg$otherExpectation("mustache content"),
      peg$c81 = /^[^|}{]/,
      peg$c82 = peg$classExpectation(["|", "}", "{"], true, false),
      peg$c83 = function(val) {
      	return val.join("").replace(/[\n\r]/gm, "").replace(/\s\s+/g, ' ');
      },
      peg$c84 = peg$otherExpectation("filter"),
      peg$c85 = "|",
      peg$c86 = peg$literalExpectation("|", false),
      peg$c87 = function(val) {
        return val;
      },
      peg$c88 = peg$otherExpectation("event syntax"),
      peg$c89 = "on:",
      peg$c90 = peg$literalExpectation("on:", false),
      peg$c91 = "@",
      peg$c92 = peg$literalExpectation("@", false),
      peg$c93 = function(event, modifier, handlers) {
      	 let isNative=false;
           const option = {};
           const modifierFiltered = [];
           modifier.forEach(item=>{
             if(["capture","once","passive"].includes(item)){
               option[item]=true
             }
             else if(item==="native"){
               isNative=true
             }
             else {
               modifierFiltered.push(item)
             }
           });
          return {event: {name:event, handlers,option, isNative,modifiers:modifierFiltered }};
      },
      peg$c94 = function(ev) {
        return Array.isArray(ev)? ev: [ev]
      },
      peg$c95 = "{",
      peg$c96 = peg$literalExpectation("{", false),
      peg$c97 = "}",
      peg$c98 = peg$literalExpectation("}", false),
      peg$c99 = function(ev1, evRest) {
         evRest.unshift(ev1);
         return evRest;
      },
      peg$c100 = function(ev) {
        return ev;
      },
      peg$c101 = function(handler) {
        return handler
      },
      peg$c102 = peg$otherExpectation("event modifier"),
      peg$c103 = ".",
      peg$c104 = peg$literalExpectation(".", false),
      peg$c105 = function(value) {
        return value;
      },
      peg$c106 = function(exp1, expn) {
         expn.forEach(exp=>{
           exp1.raw += exp.raw? exp.raw : "";
           exp1.expStr += exp.expStr;
           exp1.keys=exp1.keys.concat(exp.keys)
         });
         exp1.keys = Array.from(new Set(exp1.keys));
         return exp1;
      },
      peg$c107 = function(val) {
        if(val.expStr){
          return val;
        }
        if(val.__isProp__){
          return {keys:[val.value], raw: val.value, expStr: "ctx." + val.value}
        }
        return {keys:[],raw:val,expStr:val}
      },
      peg$c108 = function(op, val) {
       return {op,val}
      },
      peg$c109 = function(left, right_op) {
        
           const result = {expStr:"",keys:[],raw:""};
           let keys = left.keys;
           let expStr=left.expStr;
           let raw = left.raw
           
           if(right_op){
             const op = right_op.op;
             expStr+= op;
             raw+=op;
             const right = right_op.val;
             expStr+= right.expStr;
             raw+= right.raw;
             keys = [...keys,...right.keys]
           }
           return  {expStr,keys,raw};
      },
      peg$c110 = function(op, exp) {
        exp.raw=` ${op} ${exp.raw}`;
        exp.expStr=` ${op} ${exp.expStr}`
        return exp;
      },
      peg$c111 = /^[&]/,
      peg$c112 = peg$classExpectation(["&"], false, false),
      peg$c113 = "||",
      peg$c114 = peg$literalExpectation("||", false),
      peg$c115 = "+",
      peg$c116 = peg$literalExpectation("+", false),
      peg$c117 = "-",
      peg$c118 = peg$literalExpectation("-", false),
      peg$c119 = "*",
      peg$c120 = peg$literalExpectation("*", false),
      peg$c121 = /^[>=<!+\-*\/\\]/,
      peg$c122 = peg$classExpectation([">", "=", "<", "!", "+", "-", "*", "/", "\\"], false, false),
      peg$c123 = peg$otherExpectation("expression"),
      peg$c124 = /^[a-zA-Z0-9.$\-'"]/,
      peg$c125 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], ".", "$", "-", "'", "\""], false, false),
      peg$c126 = function(val) {
      	return val.join("");
      },
      peg$c127 = peg$otherExpectation("Event Assignment"),
      peg$c128 = /^[a-zA-Z0-9&=>{}() |[\],.]/,
      peg$c129 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "&", "=", ">", "{", "}", "(", ")", " ", "|", "[", "]", ",", "."], false, false),
      peg$c130 = peg$otherExpectation("html"),
      peg$c131 = /^[^<>{}]/,
      peg$c132 = peg$classExpectation(["<", ">", "{", "}"], true, false),
      peg$c133 = peg$otherExpectation("' or \" "),
      peg$c134 = /^['\/"]/,
      peg$c135 = peg$classExpectation(["'", "/", "\""], false, false),
      peg$c136 = function(exp, expRest) {
         let keys = exp.keys;
         let raw = exp.raw;
         let expStr=exp.expStr;
         
         expRest.forEach(item=>{
            expStr+= ","+item.expStr;
            raw+= ","+item.raw;
            keys=[...keys,...item.keys]
         });
         return {keys,raw:`{${raw}}`,expStr:`{${expStr}}`};
         return exp;
      },
      peg$c137 = function(val) {
        return `'${val}'`;
      },
      peg$c138 = function(key, val) {
        //key = `'${key}'`;
        val.expStr=`${key}:${val.expStr}`;
        val.raw=`${key}:${val.raw}`
        return val;
        //return {[key]:val};
      },
      peg$c139 = peg$otherExpectation("word"),
      peg$c140 = /^[a-zA-Z0-9& |.$!=\-:;#\/\\]/,
      peg$c141 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "&", " ", "|", ".", "$", "!", "=", "-", ":", ";", "#", "/", "\\"], false, false),
      peg$c142 = peg$otherExpectation("attribute value"),
      peg$c143 = peg$otherExpectation("boolean"),
      peg$c144 = "true",
      peg$c145 = peg$literalExpectation("true", false),
      peg$c146 = "false",
      peg$c147 = peg$literalExpectation("false", false),
      peg$c148 = function(val) {
        return val=="true"?true:false;
      },
      peg$c149 = peg$otherExpectation("number"),
      peg$c150 = /^[0-9]/,
      peg$c151 = peg$classExpectation([["0", "9"]], false, false),
      peg$c152 = function(val) {
         return Number(val.join(""));
      },
      peg$c153 = peg$otherExpectation("string"),
      peg$c154 = /^[a-zA-Z0-9& .$!=\-:;#]/,
      peg$c155 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "&", " ", ".", "$", "!", "=", "-", ":", ";", "#"], false, false),
      peg$c156 = function(val) {
         return `'${val.join("")}'`;
      },
      peg$c157 = peg$otherExpectation("prop"),
      peg$c158 = function(val) {
        return {
          __isProp__:true,
          value:val
        }
      },
      peg$c159 = /^[a-zA-Z$_\-.]/,
      peg$c160 = peg$classExpectation([["a", "z"], ["A", "Z"], "$", "_", "-", "."], false, false),
      peg$c161 = function(val) {
       return val.join("");
      },
      peg$c162 = function(val1, val2) {
          return val2!=null ? val1+val2 : val1;
      },
      peg$c163 = peg$otherExpectation("identifier"),
      peg$c164 = function(val) {
          return val.join("");
      },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseHtmlTag() {
    var s0;

    s0 = peg$parseHtmlTagClosing();
    if (s0 === peg$FAILED) {
      s0 = peg$parseHtmlTagSelfClosing();
      if (s0 === peg$FAILED) {
        s0 = peg$parseHtmlComment();
      }
    }

    return s0;
  }

  function peg$parseHtmlComment() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseHtmlCommentStart();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseCommentContent();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 3) === peg$c0) {
          s3 = peg$c0;
          peg$currPos += 3;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c1); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseHtmlCommentStart() {
    var s0, s1;

    peg$silentFails++;
    if (input.substr(peg$currPos, 4) === peg$c4) {
      s0 = peg$c4;
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }

    return s0;
  }

  function peg$parseCommentContent() {
    var s0, s1, s2, s3, s4;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$currPos;
    peg$silentFails++;
    if (input.substr(peg$currPos, 3) === peg$c0) {
      s4 = peg$c0;
      peg$currPos += 3;
    } else {
      s4 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }
    peg$silentFails--;
    if (s4 === peg$FAILED) {
      s3 = void 0;
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    if (s3 !== peg$FAILED) {
      if (input.length > peg$currPos) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s4 !== peg$FAILED) {
        peg$savedPos = s2;
        s3 = peg$c8(s4);
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$currPos;
      peg$silentFails++;
      if (input.substr(peg$currPos, 3) === peg$c0) {
        s4 = peg$c0;
        peg$currPos += 3;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }
      peg$silentFails--;
      if (s4 === peg$FAILED) {
        s3 = void 0;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
        if (s4 !== peg$FAILED) {
          peg$savedPos = s2;
          s3 = peg$c8(s4);
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c9(s1);
    }
    s0 = s1;
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }

    return s0;
  }

  function peg$parseHtmlTagClosing() {
    var s0, s1, s2, s3, s4;
